fix benefits item align-self

--- a/css/layout/benefits-container.scss
+++ b/css/layout/benefits-container.scss
@@ -6,6 +6,10 @@
 		flex-grow: 2;
 		width: 30%;
 	}
+	
+	@media(min-width: $tablet) {
+		align-self: baseline;
+	}
 
 	@media(min-width: 375px){
 		margin-left: 30px;
